# wgpu-isosurface

./: Cargo.toml
src/: dual_contour.rs  dual_contour.wgsl  lib.rs  texture.rs
